# FinAgent

./: .gitignore  LICENSE  README.md  config.json.example  config.py  llm_client.py  main.py  pyproject.toml  requirements.txt  web.py
.claude/: settings.json
agent/: __init__.py  agent.py
prompts/: react_prompt.txt
rag/: knowledge.txt  retriever.py  vector_store.py
rag/vector_db/: chroma.sqlite3
tools/: __init__.py  alpha_vantage_tool.py  analysis_tool.py  crypto_tool.py  forex_tool.py  frankfurter_tool.py  twelve_data_tool.py
